@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <c:Catalog 
-    xmlns:template="http://example.com/template/1.0/"
+    xmlns:template="http://example.com/template/1.1/"
     xmlns:c="http://reference.niem.gov/niem/resource/mpd/catalog/3.0/"
     xmlns:structures="http://release.niem.gov/niem/structures/3.0/"
-    xmlns:nc="http://release.niem.gov/niem/niem-core/3.0/">
+    xmlns:nc="http://release.niem.gov/niem/niem-core/3.0/"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://reference.niem.gov/niem/resource/mpd/catalog/3.0/ https://reference.niem.gov/niem/specification/model-package-description/3.0.1/xsd-mpd-catalog/mpd-catalog-3.0.xsd">
     <c:MPD 
-        c:mpdURI="http://example.com/template/0.1/" 
-	c:mpdClassURIList=
-		"http://reference.niem.gov/niem/specification/model-package-description/3.0/#MPD
-		 http://reference.niem.gov/niem/specification/model-package-description/3.0/#IEPD"
+        c:mpdURI="http://example.com/template/1.1/" 
+				c:mpdClassURIList=
+					"http://reference.niem.gov/niem/specification/model-package-description/3.0/#MPD
+					 http://reference.niem.gov/niem/specification/model-package-description/3.0/#IEPD"
         c:mpdName="TemplateExchange" 
-        c:mpdVersionID="0.1">
+        c:mpdVersionID="1.1">
         <c:MPDInformation>
             <c:AuthoritativeSource> 
                 <nc:EntityOrganization>
                     <nc:OrganizationName>TEMPLATE ORGANIZATION</nc:OrganizationName>
                     <nc:OrganizationPrimaryContactInformation>
-                        <nc:ContactWebsiteURI>http://niem.gov</nc:ContactWebsiteURI>
+                        <nc:ContactWebsiteURI>http://template.example.com</nc:ContactWebsiteURI>
                     </nc:OrganizationPrimaryContactInformation>
                 </nc:EntityOrganization>
             </c:AuthoritativeSource>
@@ -29,13 +31,13 @@
             </nc:DescriptionText>
             <c:HasDocumentElement c:qualifiedNameList="template:TemplateExchange"/>
             <c:XMLSchemaValid>
-                <c:XMLCatalog c:pathURI="xsd/xml-catalog.xml"/>
+                <c:XMLCatalog c:pathURI="xsd/niem/xml-catalog.xml"/>
             </c:XMLSchemaValid>
             <c:IEPSampleXMLDocument c:pathURI="iep-samples/exchange-sample.xml"/>
         </c:IEPConformanceTarget>
-        <c:ReadMe c:pathURI="readme.txt"/>
+        <c:ReadMe c:pathURI="README.md"/>
         <c:MPDChangeLog c:pathURI="changelog.txt"></c:MPDChangeLog>
-        <c:Wantlist c:pathURI="xsd/wantlist.xml"/>
+        <c:Wantlist c:pathURI="xsd/niem/wantlist.xml"/>
         <c:ConformanceAssertion c:pathURI="conformance-assertion.txt"/>
         <c:ExtensionSchemaDocument c:pathURI="xsd/extension/TemplateExtension.xsd"/>
      </c:MPD>
