@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xs:schema 
-    ct:conformanceTargets="http://reference.niem.gov/niem/specification/naming-and-design-rules/3.0/#ExtensionSchemaDocument"
-    targetNamespace="http://example.com/template/1.0/" version="1"
-    xmlns:template="http://example.com/template/1.0/"
-    xmlns:nc="http://release.niem.gov/niem/niem-core/3.0/"
-    xmlns:niem-xs="http://release.niem.gov/niem/proxy/xsd/3.0/" 
-    xmlns:structures="http://release.niem.gov/niem/structures/3.0/" 
-    xmlns:xs="http://www.w3.org/2001/XMLSchema" 
-    xmlns:appinfo="http://release.niem.gov/niem/appinfo/3.0/" 
+    ct:conformanceTargets="http://reference.niem.gov/niem/specification/naming-and-design-rules/4.0/#ExtensionSchemaDocument"
+    targetNamespace="http://example.com/template/1.1/" version="1"
+    xmlns:template="http://example.com/template/1.1/"
+    xmlns:nc="http://release.niem.gov/niem/niem-core/4.0/"
+    xmlns:niem-xs="http://release.niem.gov/niem/proxy/xsd/4.0/" 
+    xmlns:structures="http://release.niem.gov/niem/structures/4.0/" 
+    xmlns:appinfo="http://release.niem.gov/niem/appinfo/4.0/" 
     xmlns:ct="http://release.niem.gov/niem/conformanceTargets/3.0/" 
-    xmlns:term="http://release.niem.gov/niem/localTerminology/3.0/"
+    xmlns:term="http://release.niem.gov/niem/localTerminology/4.0/"
+    xmlns:xs="http://www.w3.org/2001/XMLSchema" 
     elementFormDefault="qualified"> 
 
     <xs:annotation>
@@ -18,19 +18,22 @@
         </xs:documentation>
     </xs:annotation>
     
-    <xs:import schemaLocation="../niem/niem-core/3.0/niem-core.xsd" namespace="http://release.niem.gov/niem/niem-core/3.0/"/>
-    <xs:import schemaLocation="../niem/proxy/xsd/3.0/xs.xsd" namespace="http://release.niem.gov/niem/proxy/xsd/3.0/"/>
-    <xs:import schemaLocation="../niem/structures/3.0/structures.xsd" namespace="http://release.niem.gov/niem/structures/3.0/"/>
+    <xs:import schemaLocation="../niem/niem-core/4.0/niem-core.xsd" namespace="http://release.niem.gov/niem/niem-core/4.0/"/>
+    <xs:import schemaLocation="../niem/proxy/xsd/4.0/xs.xsd" namespace="http://release.niem.gov/niem/proxy/xsd/4.0/"/>
+    <xs:import schemaLocation="../niem/utility/structures/4.0/structures.xsd" namespace="http://release.niem.gov/niem/structures/4.0/"/>
 
     <xs:element name="TemplateExchange" type="template:TemplateExchangeType">
         <xs:annotation><xs:documentation>
             A timestamped exchange.
         </xs:documentation></xs:annotation>
     </xs:element>
+	
     <xs:complexType name="TemplateExchangeType">
-        <xs:annotation><xs:documentation>
+        <xs:annotation>
+        	<xs:documentation>
             A data type for a timestamped exchange.
-        </xs:documentation></xs:annotation>
+        	</xs:documentation>
+        </xs:annotation>
         <xs:complexContent>
             <xs:extension base="structures:ObjectType">
                 <xs:sequence>
