@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="US-ASCII"?>
 <xs:schema
-    attributeFormDefault="qualified"
-    targetNamespace="http://release.niem.gov/niem/appinfo/3.0/"
-    version="1"
-    xmlns:appinfo="http://release.niem.gov/niem/appinfo/3.0/"
+    targetNamespace="http://release.niem.gov/niem/appinfo/4.0/"
+    version="4.0"
+    xmlns:appinfo="http://release.niem.gov/niem/appinfo/4.0/"
     xmlns:xs="http://www.w3.org/2001/XMLSchema">
 
   <xs:annotation>
@@ -60,5 +59,33 @@
       </xs:restriction>
     </xs:simpleType>
   </xs:attribute>
+
+  <xs:element name="LocalTerm">
+    <xs:complexType>
+      <xs:sequence>
+	<xs:element name="SourceText" type="appinfo:NonemptyStringSimpleType" 
+                    minOccurs="0" maxOccurs="unbounded" form="qualified"/>
+      </xs:sequence>
+      <xs:attribute name="term" type="appinfo:NonemptyStringSimpleType" use="required"/>
+      <xs:attribute name="literal" type="appinfo:NonemptyStringSimpleType"/>
+      <xs:attribute name="definition" type="appinfo:NonemptyStringSimpleType"/>
+      <xs:attribute name="sourceURIs">
+        <xs:simpleType>
+          <xs:restriction>
+            <xs:simpleType>
+              <xs:list itemType="xs:anyURI"/>
+            </xs:simpleType>
+            <xs:minLength value="1"/>
+          </xs:restriction>
+        </xs:simpleType>
+      </xs:attribute>
+    </xs:complexType>
+  </xs:element>
+
+  <xs:simpleType name="NonemptyStringSimpleType">
+    <xs:restriction base="xs:string">
+      <xs:minLength value="1"/>
+    </xs:restriction>
+  </xs:simpleType>
 
 </xs:schema>
