@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="US-ASCII"?>
 <xs:schema
-    targetNamespace="http://release.niem.gov/niem/structures/3.0/"
-    version="1"
-    xmlns:structures="http://release.niem.gov/niem/structures/3.0/"
+    targetNamespace="http://release.niem.gov/niem/structures/4.0/"
+    version="4.0"
+    xmlns:structures="http://release.niem.gov/niem/structures/4.0/"
     xmlns:xs="http://www.w3.org/2001/XMLSchema">
 
     <xs:attribute name="id" type="xs:ID"/>
     <xs:attribute name="ref" type="xs:IDREF"/>
+    <xs:attribute name="uri" type="xs:anyURI"/>
     <xs:attribute name="metadata" type="xs:IDREFS"/>
     <xs:attribute name="relationshipMetadata" type="xs:IDREFS"/>
    
     <xs:attributeGroup name="SimpleObjectAttributeGroup">
         <xs:attribute ref="structures:id"/>
         <xs:attribute ref="structures:ref"/>
+        <xs:attribute ref="structures:uri"/>
         <xs:attribute ref="structures:metadata"/>
         <xs:attribute ref="structures:relationshipMetadata"/>
         <xs:anyAttribute namespace="urn:us:gov:ic:ism urn:us:gov:ic:ntk" processContents="lax"/>
@@ -24,6 +26,7 @@
         </xs:sequence>
         <xs:attribute ref="structures:id"/>
         <xs:attribute ref="structures:ref"/>
+        <xs:attribute ref="structures:uri"/>
         <xs:attribute ref="structures:metadata"/>
         <xs:attribute ref="structures:relationshipMetadata"/>
         <xs:anyAttribute namespace="urn:us:gov:ic:ism urn:us:gov:ic:ntk" processContents="lax"/>
@@ -41,6 +44,7 @@
         </xs:sequence>
         <xs:attribute ref="structures:id"/>
         <xs:attribute ref="structures:ref"/>
+        <xs:attribute ref="structures:uri"/>
         <xs:attribute ref="structures:metadata"/>
         <xs:attribute ref="structures:relationshipMetadata"/>
         <xs:anyAttribute namespace="urn:us:gov:ic:ism urn:us:gov:ic:ntk" processContents="lax"/>
@@ -55,12 +59,14 @@
     <xs:complexType name="MetadataType" abstract="true">
         <xs:attribute ref="structures:id"/>
         <xs:attribute ref="structures:ref"/>
+        <xs:attribute ref="structures:uri"/>
         <xs:anyAttribute namespace="urn:us:gov:ic:ism urn:us:gov:ic:ntk" processContents="lax"/>
     </xs:complexType>
 
     <xs:complexType name="AugmentationType" abstract="true">
         <xs:attribute ref="structures:id"/>
         <xs:attribute ref="structures:ref"/>
+        <xs:attribute ref="structures:uri"/>
         <xs:attribute ref="structures:metadata"/>
         <xs:anyAttribute namespace="urn:us:gov:ic:ism urn:us:gov:ic:ntk" processContents="lax"/>
     </xs:complexType>
