@@ -2,3 +2,9 @@
 
     * Initial Release
 
+2017-09-05
+
+    * Updated the IEPD extension schema, NIEM subset schemas, and sample XML instance to use the NIEM 4.0 release.
+    * Updated README.md
+    * Added a conformance report generated by ConTesA.
+    * Note that the MPD catalog itself is still based on the 3.0.1 NIEM-MPD specification, which uses NIEM 3.0. 
